# edgekiller

./: .gitignore  CMakeLists.txt  LICENSE  README.md  config.json  installer.nsi  main.cpp
